# aligo-c2

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  deployment.json  dev.py  docker-compose.yml  lab_tls.py  start.bat
agent/: Dockerfile  (+4 more)
server/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
server/app/: __init__.py  main.py
server/app/api/: agents.py  demo.py  evidence.py  iot.py  ledger.py  missions.py  nodes.py  policies.py  results.py  tasks.py  vulnerabilities.py
server/app/blockchain/: contract_abi.json  contract_client.py
server/app/core/: config.py  enums.py  hashing.py  iot_plugins.py  merkle.py  policies.py  security.py  signing.py
server/app/db/: database.py  seed.py
server/app/models/: __init__.py  agent.py  ledger_event.py  mission.py  node.py  result.py  task.py  vulnerability_issue.py  vulnerability_scan.py
server/app/schemas/: agent.py  iot.py  ledger.py  mission.py  node.py  result.py  task.py  vulnerability.py
server/app/services/: agent_service.py  custody_service.py  evidence_service.py  iot_service.py  ledger_service.py  merkle_service.py  mission_service.py  node_service.py  policy_service.py  report_service.py  result_service.py  task_service.py  verifier_service.py  vuln_analysis_service.py  vuln_osint_service.py  vuln_report_service.py  vuln_scan_service.py
server/app/websocket/: agent_socket.py  dispatch.py  manager.py  node_socket.py  notifier.py  operator_socket.py
server/tests/: conftest.py  test_evidence_proof.py  test_hashing.py  test_ledger_service.py  test_plugins.py  test_vuln_analysis.py
(+155 files in other folders)
